<resources>

    <!--    common -->
    <string name="app_name">MarketMaven</string>

    <!--    farm calculator -->
    <string name="farmer_cal_heading">Calculate Farming Profit</string>
    <string name="farmer_cal_fun_text1">Enter Total Weight (kg):</string>
    <string name="farmer_cal_fun_text2">Enter Total expenses (LKR)*:</string>
    <string name="farmer_cal_fun_text2_hint">Enter Total expenses</string>
    <string name="farmer_cal_fun_text4">Item Name:</string>
    <string name="farmer_cal_fun_text2.1">(*Not Mandatory)</string>
    <string name="farmer_cal_fun_text3">Your Profit is:</string>
    <string name="farmer_cal_display_Profit">Farmer Profit</string>
    <string name="farmer_cal_Update">Update Farmer Calculation</string>


    <!--    farmer dashboard -->
    <string name="Farmer_Dash_h">Farmer Dashboard</string>
    <string name="calculate_Farmer_profit">Calculate Farmer Profit</string>
    <string name="set_farmer_price">Item Price</string>
    <string name="Farmer_history">Farmer Calculation History</string>

    <!--    Sign_Up -->
    <string name="signup_head">Sign Up</string>
    <string name="signup_name">Name</string>
    <string name="signup_address">Address</string>
    <string name="signup_address_no">No</string>
    <string name="signup_address_lane">Lane</string>
    <string name="signup_address_city">City</string>
    <string name="signup_address_district">District</string>
    <string name="signup_User_type">User Type</string>
    <string name="signup_User_type_Farmer">Farmer</string>
    <string name="signup_User_type_transport">Transport</string>
    <string name="signup_User_type_seller">Seller</string>
    <string name="signup_User_contact">Contact No</string>
    <string name="signup_User_pass">Password</string>
    <string name="signup_User_com_pass">Confirm Password</string>


    <string name="transport_head">Transport</string>
    <string name="add_transport">Calculate Transport Cost and profit</string>

    <!--    common -->
    <string name="transport_list">Transport List</string>
    <string name="calculate_header">Calculate Transport Cost</string>
    <string name="display_trans_calculation">Transport Cost</string>
    <string name="trans_history">Transport History</string>

    <!--    vegetables-->
    <string name="beans">Beans</string>
    <string name="carrots">Carrots</string>
    <string name="potato">Potato</string>
    <string name="tomato">Tomato</string>
    <string name="beet">Beet</string>
    <string name="leeks">Leeks</string>
    <string name="cabbage">Cabbage</string>
    <string name="cron">Cron</string>

    <!--    fruits-->
    <string name="mango">Mango</string>
    <string name="graphs">Graphs</string>
    <string name="avocado">Avocado</string>
    <string name="banana">Banana</string>
    <string name="waterMellon">Water Mellon</string>
    <string name="guava">Guava</string>
    <string name="papaya">Papaya</string>

    <!--    transport calculation form-->
    <string name="item_name">Item Name: </string>
    <string name="item_weight">Item Weight(Kg) : </string>
    <string name="pickup_location">Pick-Up Location: </string>
    <string name="delivery_location">Delivery Location: </string>
    <!--    placeholders-->
    <string name="hint_delivery_location">Enter Delivery Location</string>
    <string name="hint_pickup_location">Enter Pick-Up Location</string>
    <string name="hint_item_name">Enter Item Name</string>
    <string name="hint_item_weight">Enter Item Weight</string>
    <!--    buttons-->
    <string name="btn_calculate">Calculate</string>
    <string name="btn_rest_calculate">Reset</string>

    <!--    display_costs-->
    <string name="trans_date">Date: </string>
    <string name="trans_fuel_efficiency">Fuel Efficient</string>
    <string name="trans_driver_wage">Driver Wage</string>
    <string name="trans_fuel_price">Fuel Price</string>
    <string name="trans_distance">Distance</string>
    <string name="trans_total_cost">Total Cost</string>
    <string name="trans_delivery_location">Delivery Location</string>
    <string name="trans_pickup_location">Pick-Up Location</string>
    <string name="trans_item_name">Item Name</string>
    <string name="trans_item_weight">Item Weight(Kg)</string>

    <!--    select_farmer_items-->
    <string name="farm_item_select">Pick Your Item</string>
    <string name="farm_item_price_edit">Pick Item To Check Buying price</string>
    <string name="farm_item_price_edit_heading">Vegetables Buying price</string>

    <!--    farmer_history-->
    <string name="farm_item_history_expenses">Farming Expenses</string>
    <string name="farm_item_history_heading">Farmer Profit Calculation History</string>

    //login
    <string name="login_lable">Welcome</string>
    <string name="edt_name">Name</string>
    <string name="edt_pwd">Password</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_forget_pwd">Forget Password?</string>
    <string name="login_signUP">New User? Sign Up</string>

    //profile
    <string name="profile_update">Update Details</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="reset_password">Reset Password</string>
    <string name="lable_type">User Type</string>
    <string name="user_type">Farmer</string>

    //reset password
    <string name="reset_lable">Reset Password</string>
    <string name="btn_reset">confirm</string>
    <string name="reset_home">Back to Home</string>


    <!--    selling price calculation form-->
    <string name="cal_selling_price">Calculate Selling Price </string>
    <string name="transport_distance">Transport Distance: </string>
    <!--    placeholders-->

    <string name="hint_transport_distance">Enter Distance</string>
    <!--    buttons-->

    <string name="selling_price">Selling Price: </string>

    <string name="hint_selling_price">2500</string>

    <!-- ***********************************************************-->
    <!--    selling Item cost Insert-->
    <string name="insert_selling_cost">Selling Item </string>

    <string name="item_name1">Item Name: </string>
    <string name="item_weight1">Item Weight(Kg) : </string>
    <string name="transport_distance1">Transport Distance: </string>
    <string name="buying_price1">Buying Price: </string>
    <string name="selling_price1">Selling Price: </string>


    <string name="hint_item_name1">Enter Item Name</string>
    <string name="hint_item_weight1">Enter Item Weight</string>
    <string name="hint_transport_distance1">Enter Distance</string>
    <string name="hint_buying_price1">Enter Buying Price</string>
    <string name="hint_selling_price1">Enter Selling Price</string>
    <!--    buttons-->
    <string name="btn_insert">Insert</string>

    <!--    Display Cost History-->
    <string name="item_cost_history">Item Price History </string>

    <string name="item_name2">Item Name: </string>
    <string name="item_weight2">Item Weight(Kg) : </string>
    <string name="transport_distance2">Transport Distance: </string>
    <string name="buying_price2">Buying Price: </string>
    <string name="selling_price2">Selling Price: </string>

    <string name="hint_item_name2">Enter Item Name</string>
    <string name="hint_item_weight2">Enter Item Weight</string>
    <string name="hint_transport_distance2">Enter Distance</string>
    <string name="hint_buying_price2">Enter Buying Price</string>
    <string name="hint_selling_price2">Enter Selling Price</string>

    <string name="btn_delete">Delete</string>
    <string name="btn_update">Update</string>
    <string name="sign_up">Sign-Up</string>

    <!--login -->

    <!--profile -->

    <string name="change_password">Change Password</string>



    <!--SignUp -->
    <string name="sign_in_btn">SignIn</string>
    <string name="Register">Register</string>



    <!--    transport calculation form-->

    <string name="item_weight_factor">Weight Factor(per Kg) : </string>
    
    <string name="distance">Distance(km): </string>
    <string name="fuelEfficient">Fuel Efficient: </string>
    <string name="fuelPrice">Fuel Price(Rs): </string>
    <string name="driverWage">Driver Wage(Rs): </string>


    <!--    placeholders-->

    <string name="hint_item_weight_factor">Enter Weight Factor: </string>
    <string name="hint_distance">Enter Distance: </string>
    <string name="hint_fuelEfficient">Fuel Efficient(per liter): </string>
    <string name="hint_price">Enter Fuel Price: </string>
    <string name="hint_wage">Enter Driver Wage: </string>

    <!--    buttons-->

    <string name="trans_item_weight_factor">Weight Factor(per Kg): </string>
    <string name="trans_item_total_weight_factor">Total Weight Factor: </string>
    <string name="trans_transTotalFuelEfficient">Total Fuel Efficient: </string>
    <string name="trans_transTotalFuelCost">Total Fuel Cost: </string>

    <!--    edit prices-->
    <string name="edit_fuel_price">Fuel Price</string>
    <string name="new_fuel_price">New Fuel Price</string>
    <string name="edit_fuel_efficiency">Fuel Efficient</string>
    <string name="edit_driver_wage">Driver Wage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="transport_dash_head">Transport Dashboard</string>

    <string name="update_calculate_header">Update Transport Cost</string>

    <string name="trans_prices">Transport Prices</string>

    <!--    vegetables-->


    


</resources>