<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundMain">

    <include layout="@layout/appbar" android:id="@+id/appBar"/>

    <TextView
        android:id="@+id/trans_cal_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appBar"
        android:layout_marginHorizontal="34dp"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/calculate_header"
        android:textAlignment="center"
        android:textColor="@color/headingOpt2"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/item_abt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="34dp"
        android:paddingVertical="10dp"
        android:layout_below="@+id/trans_cal_header"
        android:background="@drawable/rounded_corners"
        android:paddingHorizontal="12sp"
        android:gravity="center"
        android:elevation="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/item_name"
            android:fontFamily="@font/poppins"
            android:textColor="@color/headingOpt2"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tomato"
            android:textSize="24sp"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/headingMain"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cal_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="34dp"
        android:layout_marginVertical="16dp"
        android:paddingVertical="20dp"
        android:layout_below="@+id/item_abt"
        android:background="@drawable/rounded_corners"
        android:paddingHorizontal="12sp"
        android:gravity="center"
        android:orientation="vertical"
        android:elevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="12dp">
            <TextView
                android:id="@+id/label_weight"
                android:labelFor="@id/edt_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/item_weight"
                android:fontFamily="@font/poppins"
                android:textColor="@color/headingMain"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/edt_weight"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hint_item_weight"
                android:textSize="16sp"
                android:textColorHint="@color/headingOpt1"
                android:textColor="@color/para_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="12dp">
            <TextView
                android:id="@+id/label_pickup"
                android:labelFor="@id/edt_pickup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/pickup_location"
                android:fontFamily="@font/poppins"
                android:textColor="@color/headingMain"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/edt_pickup"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hint_pickup_location"
                android:textSize="16sp"
                android:textColorHint="@color/headingOpt1"
                android:textColor="@color/para_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="12dp">
            <TextView
                android:id="@+id/label_delivery"
                android:labelFor="@id/edt_delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/delivery_location"
                android:fontFamily="@font/poppins"
                android:textColor="@color/headingMain"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/edt_delivery"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hint_delivery_location"
                android:textSize="16sp"
                android:textColorHint="@color/headingOpt1"
                android:textColor="@color/para_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp"
            android:gravity="center_horizontal">
            <Button
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/btn_rest_calculate"
                android:backgroundTint="@color/para_text"
                android:fontFamily="@font/poppins"
                android:textSize="16sp"
                android:textAllCaps="false"/>
            <Button
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_calculate"
                android:backgroundTint="@color/backgroundOpt2"
                android:fontFamily="@font/poppins"
                android:textSize="16sp"
                android:textAllCaps="false"/>
        </LinearLayout>





    </LinearLayout>



</RelativeLayout>