<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundMain"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <include layout="@layout/appbar" android:id="@+id/appBar"/>


        <TextView
            android:id="@+id/farm_cal_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/appBar"
            android:layout_marginHorizontal="34dp"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/signup_head"
            android:textAlignment="center"
            android:textColor="@color/headingOpt2"
            android:textSize="30sp"
            android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/cal_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/farm_cal_header"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="34dp"
        android:layout_marginVertical="16dp"
        android:layout_marginTop="229dp"
        android:layout_marginBottom="340dp"
        android:background="@drawable/rounded_corners"
        android:elevation="8dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="12sp"
        android:paddingVertical="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:labelFor="@id/edt_weight"
                android:text="@string/item_weight"
                android:textColor="@color/headingMain"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_weight"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hint_item_weight"
                android:textColor="@color/para_text"
                android:textColorHint="@color/headingOpt1"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_pickup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:labelFor="@id/edt_pickup"
                android:text="@string/pickup_location"
                android:textColor="@color/headingMain"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_pickup"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hint_pickup_location"
                android:textColor="@color/para_text"
                android:textColorHint="@color/headingOpt1"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:labelFor="@id/edt_delivery"
                android:text="@string/delivery_location"
                android:textColor="@color/headingMain"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_delivery"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hint_delivery_location"
                android:textColor="@color/para_text"
                android:textColorHint="@color/headingOpt1"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="12dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/para_text"
                android:fontFamily="@font/poppins"
                android:text="@string/btn_rest_calculate"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <Button
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/backgroundOpt2"
                android:fontFamily="@font/poppins"
                android:text="@string/btn_calculate"
                android:textAllCaps="false"
                android:textSize="16sp" />
        </LinearLayout>


    </LinearLayout>


</ScrollView>

</RelativeLayout>
