<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".activities01.ItemDataInsert">

    <TextView
        android:id="@+id/title"
        android:layout_width="196dp"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:text="Selling Item"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="379dp"
        android:layout_height="548dp"
        android:layout_below="@+id/title"
        android:background="@drawable/rounded_corners"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.275">

        <TextView
            android:id="@+id/selling_item_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/item_name1"
            android:textColor="@color/backgroundOpt2"
            android:textSize="18sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/selling_item_name1_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:backgroundTint="@color/backgroundOpt1"
            android:hint="@string/hint_item_name1"
            android:textColor="@color/headingOpt1"
            android:textSize="16sp" />
<!--        <Spinner-->
<!--            android:id="@+id/item_spinner"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:entries="@array/item_options"-->
<!--            android:spinnerMode="dropdown" />-->

        <TextView
            android:id="@+id/selling_item_weight1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/item_weight1"
            android:textColor="@color/backgroundOpt2"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/selling_item_weight1_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:backgroundTint="@color/backgroundOpt1"
            android:hint="@string/hint_item_weight1"
            android:textColor="@color/headingOpt1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/selling_item_distance1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/transport_distance1"
            android:textColor="@color/backgroundOpt2"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/selling_item_distance1_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:backgroundTint="@color/backgroundOpt1"
            android:hint="@string/hint_transport_distance1"
            android:textColor="@color/headingOpt1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/selling_item_buyprice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/buying_price1"
            android:textColor="@color/backgroundOpt2"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/selling_item_buyprice1_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:backgroundTint="@color/backgroundOpt1"
            android:hint="@string/buying_price1"
            android:textColor="@color/headingOpt1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/selling_item_selprice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/selling_price1"
            android:textColor="@color/backgroundOpt2"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/selling_item_selprice1_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:backgroundTint="@color/backgroundOpt1"
            android:hint="@string/hint_selling_price1"
            android:textColor="@color/headingOpt1"
            android:textSize="16sp" />

        <Button
            android:id="@+id/insert_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_layout_margin_top"
            android:backgroundTint="@color/backgroundOpt2"
            android:text="Insert" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>